Added get shifts endpoint
