# core/models/errors.go
@@ -4,8 +4,9 @@ type Errors BaseResponse
 
 var (
 	// Validations
-	MissingParamError = BaseResponse{Success: false, ErrorType: "MISSING_PARAMETER", ErrorMsg: "Request parameter(s) missing", ErrorStack: []string{}}
-	InvalidParamError = BaseResponse{Success: false, ErrorType: "INVALID_PARAMETER", ErrorMsg: "Request parameter(s) is invalid", ErrorStack: []string{}}
+	MissingParamError     = BaseResponse{Success: false, ErrorType: "MISSING_PARAMETER", ErrorMsg: "Request parameter(s) missing", ErrorStack: []string{}}
+	InvalidParamError     = BaseResponse{Success: false, ErrorType: "INVALID_PARAMETER", ErrorMsg: "Request parameter(s) is invalid", ErrorStack: []string{}}
+	InvalidDateRangeError = BaseResponse{Success: false, ErrorType: "INVALID_DATE_RANGE", ErrorMsg: "Date range is invalid", ErrorStack: []string{}}
 
 	// User
 	UserDoesNotExistError = BaseResponse{Success: false, ErrorType: "DOES_NOT_EXIST", ErrorMsg: "User does not exist", ErrorStack: []string{}}
